Fixes to db queries
